--- a/project2.ipynb
+++ b/project2.ipynb
@@ -1007,13 +1007,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bs4 as BeautifulSoup\n",
+    "import bs4\n",
     "import requests\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save and print the text content of a page with all tags removed\n",
+    "with open('north_america_wikipedia.html') as html_file:\n",
+    "    soup = BeautifulSoup(html_file)"
    ]
   },
   {
@@ -1022,9 +1042,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save and print the text content of a page with all tags removed\n",
-    "with open('simple.html') as html_file:\n",
-    "    soup = BeautifulSoup(html_file)"
+    "print(soup.prettify())"
    ]
   },
   {
