parts one and two

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,41 +1027,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save and print the text content of a page with all tags removed\n",
-    "with open('north_america_wikipedia.html') as html_file:\n",
+    "with open('kadia-molodowsky-wiki.html') as html_file:\n",
     "    soup = BeautifulSoup(html_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n\\n\\nKadia Molodowsky - Wikipedia\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nJump to content\\n\\n\\n\\n\\n\\n\\n\\nMain menu\\n\\n\\n\\n\\n\\nMain menu\\nmove to sidebar\\nhide\\n\\n\\n\\n\\t\\tNavigation\\n\\t\\n\\n\\nMain pageContentsCurrent eventsRandom articleAbout WikipediaContact us\\n\\n\\n\\n\\n\\n\\t\\tContribute\\n\\t\\n\\n\\nHelpLearn to editCommunity portalRecent changesUpload file\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nSearch\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nSearch\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nAppearance\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nDonate\\n\\nCreate account\\n\\nLog in\\n\\n\\n\\n\\n\\n\\n\\n\\nPersonal tools\\n\\n\\n\\n\\n\\nDonate Create account Log in\\n\\n\\n\\n\\n\\n\\t\\tPages for logged out editors learn more\\n\\n\\n\\nContributionsTalk\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nContents\\nmove to sidebar\\nhide\\n\\n\\n\\n\\n(Top)\\n\\n\\n\\n\\n\\n1\\nBiography\\n\\n\\n\\n\\n\\n\\n\\n\\n2\\nPoetry collections\\n\\n\\n\\n\\n\\n\\n\\n\\n3\\nWorks in English translation (or bilingual editions)\\n\\n\\n\\n\\n\\n\\n\\n\\n4\\nReferences\\n\\n\\n\\n\\n\\n\\n\\n\\n5\\nExternal links\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nToggle the table of contents\\n\\n\\n\\n\\n\\n\\n\\nKadia Molodowsky\\n\\n\\n\\n12 languages\\n\\n\\n\\n\\nБеларускаяБеларуская (тарашкевіца)DeutschEspañolFrançaisՀայերենItalianoעבריתPolskiРусскийУкраїнськаייִדיש\\n\\nEdit links\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nArticleTalk\\n\\n\\n\\n\\n\\nEnglish\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nReadEditView history\\n\\n\\n\\n\\n\\n\\n\\nTools\\n\\n\\n\\n\\n\\nTools\\nmove to sidebar\\nhide\\n\\n\\n\\n\\t\\tActions\\n\\t\\n\\n\\nReadEditView history\\n\\n\\n\\n\\n\\n\\t\\tGeneral\\n\\t\\n\\n\\nWhat links hereRelated changesUpload fileSpecial pagesPermanent linkPage informationCite this pageGet shortened URLDownload QR code\\n\\n\\n\\n\\n\\n\\t\\tPrint/export\\n\\t\\n\\n\\nDownload as PDFPrintable version\\n\\n\\n\\n\\n\\n\\t\\tIn other projects\\n\\t\\n\\n\\nWikimedia CommonsWikiquoteWikidata item\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nAppearance\\nmove to sidebar\\nhide\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nFrom Wikipedia, the free encyclopedia\\n\\n\\nAmerican poet\\nBorn(1894-05-10)May 10, 1894Byaroza, Grodno Governorate, Russian EmpireDiedMarch 23, 1975(1975-03-23) (aged\\xa080)Philadelphia, United StatesLanguageYiddishCitizenshipRussian Empire, Poland, United StatesNotable worksPoetry collections:Kheshvendike nekht: liderDzshike gas and othersSpouseSimcha Lev\\nKadia Molodowsky (Yiddish: קאַדיע מאָלאָדאָװסקי; also: Kadya Molodowsky; May 10, 1894, in Bereza Kartuska,  now Byaroza, Belarus – March 23, 1975, in Philadelphia) was a Polish-American poet and writer in the Yiddish language, and a teacher of Yiddish and Hebrew. She published six collections of poetry during her lifetime, and was a widely recognized figure in Yiddish poetry during the twentieth century.[1][2]\\nMolodowsky first came to prominence as a poet and intellectual in the Yiddish literary world while living in Warsaw, in the newly independent Poland, during the interwar period.[3][4] Some of her more playful poems and stories were set to music and sung in Yiddish schools throughout the world.[5] She was also known for novels, dramas, and short stories. In 1935 she emigrated to the United States, where she continued publishing works in Yiddish.[3] She also went on to found and edit two international Yiddish literary journals, היים Heym (Home) and סבֿיבֿה Svive (Milieu).[6][7]\\n\\n\\nBiography[edit]\\nBorn in the shtetl of Byaroza-Kartuskaya (now Byaroza), in the Grodno Governorate of the Russian Empire (present-day Belarus), Molodowsky was educated at home in both religious and secular subjects.[4] While her father, a teacher in a traditional Jewish elementary school (cheder), instructed her in the Torah, her paternal grandmother taught her Yiddish; with private tutors she studied secular subjects in Russian, including geography, philosophy, and world history.[2]  Molodowsky\\'s mother ran a dry goods store and, later, a factory for making rye kvass.[2]\\nMolodowsky finished high school at 17 years of age.[2] After then obtaining her teaching certificate in Byaroza, she studied Hebrew pedagogy under Yehiel Halperin in Warsaw, in 1913–1914, and, in the latter part of that period, instructed children there who had been displaced during the First World War.[2] In 1916, she followed Halperin to Odessa, where he had moved his course to escape the war front.[6] In Odessa, Molodowsky taught kindergarten and elementary school.[2]\\nIn 1917, upon attempting to return to her hometown, she was trapped in Kiev, where she remained for several years; she lived through the pogroms that occurred there in 1919.[2]\\nWhile living in Kiev, Molodowsky was influenced by the Yiddish literary circle around David Bergelson,[8] and, in 1920, published her first poems, in the Yiddish journal Eygns (Our Own).[6] In 1921, she married the scholar and journalist Simcha Lev, and together they settled in Warsaw, now in independent Poland.[2]\\nIn Warsaw, Molodowsky published her first book of poetry, Kheshvndike nekht (Nights of Heshvan), in 1927, followed by several others, including Dzshike gas (Dzshike Street), in 1933.[2][8] Throughout her years in Warsaw she taught Yiddish in secular elementary schools run by the Central Yiddish School Organization (Tsentrale Yidishe Shul-Organizatsye; TSYSHO); she also taught Hebrew in the evenings at a Jewish community school.[6]\\nMolodowsky emigrated to the United States in 1935 and settled in New York City, where her husband joined her not long after.[2] Among her works in the post-World War II period, she is especially noted for her collection Der melekh David aleyn iz geblibn (Only King David Remained; 1946), poems written in response to the Holocaust, including one of her best known poems, \"Eyl Khanun\" (Merciful God), composed in 1945.[7]\\nFrom 1949 to 1952 Molodowsky and her husband lived in Tel Aviv, in the new state of Israel, where she edited the Yiddish journal Di Heym (Home),[7] published by the Working Women\\'s Council (Moetzet Hapoalot).[9] In late 1952, Molodowsky resigned her editorship of Heym, and she and her husband returned to New York.[10]\\nBack in 1943, Molodowsky had co-founded the Yiddish journal, Di Svive (Milieu), in New York, publishing seven issues through 1944;[7] around 1960 she revived the journal (under the same title) and continued to edit it until near the time of her death.[3] Her autobiography, Fun Mayn Elter-zeydns Yerushe (From my great-grandfather’s inheritance), appeared in serialized form in Svive from March 1965 to April 1974.[2]\\nIn 1971, Molodowsky received the Itzik Manger Prize for Yiddish literature.[1]\\nMolodowsky\\'s husband, Simcha Lev, died in New York City in 1974. In frail health, she moved to Philadelphia to be near relatives, and died in a nursing home there, on March 23, 1975.[11]\\n\\nPoetry collections[edit]\\nKheshvendike nekht: lider. Vilna: B. Kletskin, 1927[6]\\nDzshike gas. Warsaw: Literarishe Bleter\\xa0[he], 1933[6]\\nFreydke. Warsaw: Literarishe Bleter, 1935[6]\\nIn land fun mayn gebeyn. Chicago: Farlag L. M. Shteyn, 1937[6]\\nDer melekh dovid aleyn iz geblibn. New York: Farlag Papirene Brik, 1946[6]\\nLikht fun dornboym. Buenos Aires: Farlag Poaley Tsion Histadrut, 1965[6]\\nWorks in English translation (or bilingual editions)[edit]\\nPaper Bridges: Selected Poems of Kadya Molodowsky (1999). Text in Yiddish and English translation, on facing pages. Translated and edited, and with an introduction by Kathryn Hellerstein. Detroit: Wayne State University Press. ISBN\\xa09780814328460. Preview online\\nA House with Seven Windows: Short Stories (2006). Translation by Leah Schoolnik, of A Shtub mit Zibn Fentster, first published in 1957. Syracuse, NY: Syracuse University Press. ISBN\\xa09780815608455\\nA Jewish Refugee in New York: Rivke Zilberg’s Journal (2019). Translation by Anita Norich, of Fun Lublin biz Nyu-york: tog-bukh fun Rivke Zilberg, first published in 1942. Bloomington, IN: Indiana University Press. ISBN 9780253040756\\nReferences[edit]\\n\\n\\n^ a b \"Kadya Molodowsky (1894-1975).\" Jewish Heritage Online Magazine. Excerpt from: Kathryn Hellerstein, \"Introduction,\" in Paper Bridges: Selected Poems of Kadya Molodowsky (Detroit: Wayne State University Press, 1999). Retrieved 2016-04-16.\\n\\n^ a b c d e f g h i j k Hellerstein, Kathryn (20\\xa0March 2009). \"Kadya Molodowsky.\" Jewish Women: A Comprehensive Historical Encyclopedia. The Jewish Women\\'s Archive. Retrieved from www.jwa.org 2016-04-16.\\n\\n^ a b c Klepfisz, Irena (1994). \"Di Mames, dos Loshn / the Mothers, the Language: Feminism, Yidishkayt, and the Politics of Memory.\" Bridges. Vol. 4, no. 1, p. 12–47; here: p. 34.\\n\\n^ a b Braun, Alisa (2000). \"(Re)Constructing the Tradition of Yiddish Women\\'s Poetry.\" Review of Paper Bridges: Selected Poems of Kadya Molodowsky, by Moldowsky and Kathryn Hellerstein. Prooftexts. Vol. 20, no. 3, p. 372-379; here: p. 372.\\n\\n^ Liptzin, Sol; Hellerstein, Kathryn (2007). \"Molodowsky, Kadia\". In Berenbaum, Michael; Skolnik, Fred (eds.). Encyclopaedia Judaica. Vol.\\xa014 (2nd\\xa0ed.). Detroit: Macmillan Reference. pp.\\xa0429–430. ISBN\\xa0978-0-02-866097-4.\\n\\n\\n^ a b c d e f g h i j Hellerstein, Kathryn (2\\xa0September 2010). \"Molodowsky, Kadia.\" YIVO Encyclopedia of Jews in Eastern Europe. Retrieved 2016-04-16.\\n\\n^ a b c d Hellerstein, Kathryn (2003). \"Kadya Molodowsky.\" In: S. Lillian Kremer (Ed.), Holocaust Literature. Vol. 2. New York: Routledge.  p. 869-873; here: p. 870.\\n\\n^ a b Frieden, Ken. \"Yiddish literature.\" Section: \"\\'Modern Yiddish Literature: Yiddish Women Writers.\" Encyclopædia Britannica. Encyclopædia Britannica Online. Retrieved 2016-04-16.\\n\\n^ Rojanski, Rachel (2012). \"Yiddish Journals for Women in Israel: Immigrant Press and Gender Construction (1948-1952).\" In: Marion Aptroot, Efrat Gal-Ed, Roland Gruschka, & Simon Neuberg (Eds.), Jiddistik heute / Yiddish Studies Today. Düsseldorf: Düsseldorf University Press. p.   585- 602; here: p. 590. ISBN\\xa09783943460094. Article available online from the university\\'s digital repository as a PDF file; retrieved 2016-04-16.\\n\\n^ Hellerstein, Kathryn (1999). \"Introduction.\" In: Paper Bridges: Selected Poems of Kadya Molodowsky (pp. 17-51). Detroit: Wayne State University Press. p. 46.\\n\\n^ Hellerstein (1999), \"Introduction,\" Paper Bridges, p. 50.\\n\\n\\nExternal links[edit]\\n\\n\\n\\nWikiquote has quotations related to Kadia Molodowsky.\\n\\nGuide to the Papers of Kadia Molodowsky. YIVO Institute for Jewish Research, RG 703\\nJewish Women\\'s Archive page\\nYIVO page\\n\"Kadia Molodowsky Reads Her Work\" (audio)\\nAuthority control databases InternationalISNIVIAFFASTWorldCatNationalGermanyUnited StatesFranceBnF dataAustraliaCzech RepublicNetherlandsSwedenPolandIsraelPeopleTroveDeutsche BiographieDDBOtherIdRefSNAC\\n\\n\\n\\n\\nRetrieved from \"https://en.wikipedia.org/w/index.php?title=Kadia_Molodowsky&oldid=1256889960\"\\nCategories: 1894 births1975 deathsPeople from ByarozaPeople from Pruzhansky UyezdBelarusian JewsPolish emigrants to the United StatesAmerican people of Belarusian-Jewish descentAmerican women poetsJewish American poetsJewish women writersAmerican poets in YiddishYiddish-language writers20th-century American women writersItzik Manger Prize recipientsHidden categories: Articles with short descriptionShort description is different from WikidataArticles containing Yiddish-language text\\n\\n\\n\\n\\n\\n\\n This page was last edited on 12 November 2024, at 02:07\\xa0(UTC).\\nText is available under the Creative Commons Attribution-ShareAlike 4.0 License;\\nadditional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.\\n\\n\\nPrivacy policy\\nAbout Wikipedia\\nDisclaimers\\nContact Wikipedia\\nCode of Conduct\\nDevelopers\\nStatistics\\nCookie statement\\nMobile view\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(soup.prettify())"
+    "soup.get_text()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Kadya_Molodovsky.jpg/220px-Kadya_Molodovsky.jpg'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#download an image with beautifulsoup and save it in this repository"
+    "#download an image with beautifulsoup and save it in this repository\n",
+    "img_tags=soup.find_all('img')\n",
+    "img_tags[3]['src']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_url=img_tags[3]['src']\n",
+    "img_url = \"https:\" + img_url\n",
+    "img=requests.get(img_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('image.jpg','wb') as f:\n",
+    "    f.write(img.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "#find all the links in a page with beautifulsoup\n",
-    "#print the first 100 characters of ten of these links"
+    "#print the first 100 characters of ten of these links\n",
+    "links=soup.find_all('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#bodyContent\n",
+      "/wiki/Main_Page\n",
+      "/wiki/Wikipedia:Contents\n",
+      "/wiki/Portal:Current_events\n",
+      "/wiki/Special:Random\n",
+      "/wiki/Wikipedia:About\n",
+      "//en.wikipedia.org/wiki/Wikipedia:Contact_us\n",
+      "/wiki/Help:Contents\n",
+      "/wiki/Help:Introduction\n",
+      "/wiki/Wikipedia:Community_portal\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1  #Create a counter\n",
+    "for link in links[:10]:  # Print the first 10 links\n",
+    "    href = link['href']\n",
+    "    print(href[:100])\n",
+    "    count += 1"
    ]
   },
   {
@@ -1073,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1338,7 @@
        "[2000 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
